--- a/chat/css/main.css
+++ b/chat/css/main.css
@@ -2,39 +2,65 @@
 	width:  80%;
 }
 
-#thread{
-	background-color: lightgrey;
-	height:80vh;
+h1{
+	text-align:center;
+}
 
+#thread-wrapper-container{
+	position:relative;
 }
-.inner{
-	background-color: grey;
-	position: relative;
-	padding-left: 10px;
+
+#thread-wrapper{
+	overflow-y:auto;
+	height:60vh;
+	background-color: lightgrey;
 }
+#thread{
+	position:relative;
+}
+
+#noteholder{
+	position:absolute;
+	background-color: rgba(102,102,255, .7);
+	padding-left: 5px;
+	padding-right: 5px;
+	bottom:0;
+}
+
+.row{
+	padding: 5px 4px;
+}
+
 .left{
-	margin-right: 50%;
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 20px;
-	background-color: red;
-
+	background-color: #ffffb3;
+	min-height: 20px;
 }
+
 .right{
-	margin-left: 50%;
 	border-bottom-left-radius: 5px;
 	border-top-right-radius: 20px;
 	border-top-left-radius: 5px;
-	background-color: blue;
+	background-color: #ccffff;
+	min-height: 20px;
 }
 
-span{
-	font-size: 10px;
+.left, .right{
+	word-break: break-all;
+}
+
+.remove{
+	font-size: 7px;
 	position:absolute;
 	padding-right: 10px;
 	bottom:0;
 	right:0;
 }
-p{
-	word-break: break-all;
+
+.remove:hover{
+	font-size: 9px;
 }
+
+
